--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="form-control">
                 <p style="font-size: 21px;">Subjects</p>
                 <input type="checkbox" style="display: inline-block;width: auto;" required> <span>Software Testing</span><br>
-                <input type="checkbox" style="display: inline-block;width: auto;" required> <span>ADVANCE JAVA</span><br>
+                <input type="checkbox" style="display: inline-block;width: auto;" required> <span>Advance Java</span><br>
                 <input type="checkbox" style="display: inline-block;width: auto;" required> <span>Cloud Computing</span><br>
                 <input type="checkbox" style="display: inline-block;width: auto;" required> <span>Computer Network</span><br>
                 <input type="checkbox" style="display: inline-block;width: auto;" required> <span>Computer Network</span><br>
