--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <label for="">Email Address</label>
             </div>
             <div class="form-control">
-                <input type="text" required>
+                <input type="text" name="clg" required>
                 <label for="">College Name</label>
             </div>
             <div class="form-control">
